--- a/book-home/package.json
+++ b/book-home/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.2.1",
+     "axios": "^1.10.0",
     "expo": "~52.0.47",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
